# ps-games

./: .gitignore  games.json  package.yaml  ps-game-price-history.cabal  run.sh  stack.yaml
src/: Game.hs  Main.hs
src/Game/: Database.hs  Store.hs
