name:                ps-game-price-history
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable ps-game-price-history
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game
                     , Game.Database
                     , Game.Store
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers
                     , directory
                     , http-client
                     , http-client-tls
                     , hslogger
                     , monad-loops
                     , unordered-containers
                     , text
                     , time
